<resources>
    <string name="app_name">El Peñol</string>

    <string name="botonHoteles">Hoteles</string>
    <string name="botonRestaurantes">Restaurantes</string>
    <string name="botonSitios">Sitios turisticos</string>

    <string name="titulohomehoteles">Hoteles en el Peñol</string>
    <string name="descripcionhomehoteles">En nuestro pueblo encontraras desde 35000 COP hasta las
        lujosas cabañas dotadas de todos los elementos para promover un descanso restaurador</string>
    <string name="botonhomehoteles">Ver hoteles</string>

    <string name="titulohomerestaurantes">Restaurantes en el Peñol</string>
    <string name="descripcionrestaurantes">Debido a que el departamento de Antioquia integra sabores
        de diferentes partes del mundo y la variedad de insumos locales para a su cocina, se puede
        asegurar que los visitantes quedarán enamorados de la culinaria Antioquia. </string>
    <string name="botonhomerestaurantes">Ver Restaurantes</string>

    <string name="nombre">David Salazar Saldarriaga</string>
    <string name="acercaDe">Musico, programador  y actualmente
en proceso de formación como Técnico en
Desarrollo de Software. Combino la creatividad
visual con conocimientos técnicos para crear
experiencias únicas. Mi perl abarca desde el

diseño gráco hasta la programación, destacán-
dome en el área de desarrollo Front end. Poseo

competencias laborales de dinamismo, creativi-
dad y atención al detalle, fundamentales para

impulsar proyectos hacia el siguiente nivel.</string>

    <string name="titulohomesitios">Sitios Turisticos</string>
    <string name="descripcionresitios">
        La quietud de los cielos azules y despejados de la península de Antioquia,
        zona Hermosa del nororiente colombiano, se ve interrumpida por arreboles de un rosado intenso que se disuelven
        en espirales sobre las lagunas del Peñol y Fauna Los animales. </string>

    <string name="opcion1">Ingles</string>
    <string name="opcion2">Español</string>
    <string name="opcion3">Francés</string>
    <string name="opcion4">Reseña</string>
    <string name="opcion5">Acerca de</string>

    <string name="titulohomeresena2">Historia de el Peñol </string>

    <string name="historiamanaure">El pueblo original fue fundado el 20 de junio de 1714 por Fray Miguel de Castro y Rivadeneiro, y erigido como municipio en 1774. Dista 69 kilómetros de Medellín, capital del departamento de Antioquia.

            Sus apelativos tradicionales son "Tierra de Agua" y "El Ave Fénix de Antioquia".

            El Peñol cuenta con 23 veredas, como: Despensas, La Magdalena, El Marial, La Chapa, Palmira, Santa Ana, El Salto, Santa Inés, Horizontes, El Morro, Guamito, El Carmelo, La Hélida, Concordia, La Meseta, Chiquinquirá, El Chilco, Bonilla, La Culebra, Palestina, La Cristalina, La Magdalena, El Uvital. Se comunica por carretera con Guatapé, Granada, El Santuario y Marinilla.</string>


</resources>